--- a/app.wxss
+++ b/app.wxss
@@ -3,8 +3,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: space-between;
-  padding: 200rpx 0;
+  padding: 0 0;
   box-sizing: border-box;
 } 
