--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,4 +1,8 @@
 /**index.wxss**/
+.container{
+  align-items: center;
+  padding:200rpx 0;
+}
 .userinfo {
   display: flex;
   flex-direction: column;
